# octocode

./: CHANGELOG.md  Cargo.toml  Dockerfile  INSTALL.md  INSTRUCTIONS.md  PR_DESCRIPTION.md  README.md  server.json
.github/workflows/: ci.yml  dependencies.yml  release.yml
benchmark/: README.md  RESULTS.json  RESULTS.md  code.csv  config.toml  docs.csv  locbench.py  run_matrix.py  score.py
config-templates/: default.toml
doc/: ADVANCED_USAGE.md  API_KEYS.md  ARCHITECTURE.md  COMMANDS.md  CONFIGURATION.md  CONTRIBUTING.md  GETTING_STARTED.md  MCP_CLIENTS.md  MCP_INTEGRATION.md  MEMORY_SYSTEM.md  PERFORMANCE.md  RELEASE_MANAGEMENT.md
src/: config.rs  constants.rs  grep.rs  lib.rs  lock.rs  main.rs  reranker.rs  state.rs  storage.rs  watcher_config.rs
src/commands/: branch.rs  clear.rs  commit.rs  config.rs  diff.rs  explain.rs  export.rs  format.rs  graphrag.rs  grep.rs  import.rs  index.rs  logs.rs  mcp.rs  mcp_proxy.rs  mod.rs  models.rs  release.rs  review.rs  search.rs  stats.rs  view.rs  watch.rs
src/commands/format/: utils.rs
src/embedding/: mod.rs  tests.rs  types.rs
src/embedding/provider/: fastembed.rs  huggingface.rs  mod.rs
src/indexer/: batch_processor.rs  branch.rs  code_region_extractor.rs  contextual.rs  differential_processor.rs  file_utils.rs  git_utils.rs  graph_optimization.rs  markdown_processor.rs  mod.rs  render_utils.rs  search.rs  signature_extractor.rs  text_processing.rs
src/indexer/commits/: mod.rs
src/indexer/graphrag/: ai.rs  builder.rs  database.rs  mod.rs  relationships.rs  tests.rs  types.rs  utils.rs
src/indexer/languages/: bash.rs  cpp.rs  cpp_test.rs  css.rs  go.rs  java.rs  java_test.rs  javascript.rs  lua.rs  markdown.rs  mod.rs  php.rs  php_test.rs  python.rs  resolution_utils.rs  ruby.rs  rust.rs  svelte.rs  swift.rs  swift_test.rs  typescript.rs
src/llm/: mod.rs
src/mcp/: graphrag.rs  handlers.rs  http.rs  logging.rs  memory.rs  mod.rs  multi.rs  proxy.rs  semantic_code.rs  server.rs  structural.rs  types.rs  watcher.rs
src/mcp/lsp/: client.rs  protocol.rs  provider.rs  tools.rs
src/memory/: store.rs
src/store/: batch_converter.rs  block_trait.rs  debug.rs  graphrag.rs  hybrid_tests.rs  metadata.rs  mod.rs  sql.rs  table_ops.rs  vector_optimizer.rs  weighted_rrf.rs
src/utils/: diff_chunker.rs  mod.rs  path.rs
