[package]
name = "octocode"
version = "0.10.0"
edition = "2021"
rust-version = "1.82"
authors = ["Muvon Un Limited <opensource@muvon.io>"]
description = "AI-powered code indexer with semantic search, GraphRAG knowledge graphs, and MCP server for multi-language codebases"
homepage = "https://octocode.muvon.io"
repository = "https://github.com/muvon/octocode"
documentation = "https://docs.rs/octocode"
license = "Apache-2.0"
keywords = ["ai", "semantic-search", "code-analysis", "graphrag", "mcp-server"]
categories = ["development-tools", "command-line-utilities", "parsing", "text-processing", "algorithms"]
readme = "README.md"
exclude = [
    "tests/fixtures/*",
    "examples/*",
    ".github/*",
    "docs/*",
    "scripts/*",
    "*.md",
    "install.sh"
]

[features]
default = []
fastembed = ["octolib/fastembed"]
huggingface = ["octolib/huggingface"]

# Optimized release profile for static linking
[profile.release]
lto = true              # Enable Link Time Optimization
codegen-units = 1       # Reduce parallel code generation units for better optimization
panic = "abort"         # Abort on panic for smaller binary size
strip = true            # Strip symbols from binary
opt-level = "z"         # Optimize for size
overflow-checks = false # Disable overflow checks in release mode

# Cross-compilation configuration is in .cargo/config.toml

[dependencies]
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "time", "sync", "io-util", "io-std", "process"] }
ignore = "0.4.23"
parking_lot = "0.12.4"
lance-table = { version = "0.33.0", default-features = false, features = [] }
lance = { version = "0.33.0", default-features = false, features = [] }
lancedb = { version = "0.21.3", default-features = false }
arrow = { version = "55.2.0", default-features = false, features = ["prettyprint"] }
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
async-trait = "0.1"
tree-sitter = "0.25.8"
tree-sitter-php = "0.23.11"
tree-sitter-rust = "0.23.3"
tree-sitter-python = "0.23.6"
tree-sitter-javascript = "0.23.1"
tree-sitter-json = "0.24.8"
tree-sitter-go = "0.23.4"
tree-sitter-cpp = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-bash = "0.25.0"
tree-sitter-css = "0.23.2"
tree-sitter-lua = "0.2.0"

uuid = { version = "1.18.0", default-features = false, features = ["v4"] }
tree-sitter-typescript = "0.23.2"
tree-sitter-ruby = "0.23.1"
tree-sitter-svelte-ng = "1.0.2"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1.0.99"
serde_json = "1.0.142"
sha2 = "0.10.9"
clap = { version = "4.5.45", features = ["derive"] }
clap_complete = "4.5.57"
notify = { version = "8.2.0", default-features = false, features = ["crossbeam-channel", "macos_fsevent"] }
notify-debouncer-mini = "0.7.0"
toml = "0.9.5"
lazy_static = "1.5.0"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
globset = { version = "0.4.16", default-features = false }
regex = { version = "1.11.1", default-features = false, features = ["std"] }
dirs = "6.0.0"
# EditorConfig parsing and formatting
ec4rs = "1.2.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"
# LSP integration dependencies
lsp-types = "0.97.0"
url = "2.5.4"
dotenvy = "0.15"

# Local dependency on octolib with embedding features
# octolib = { path = "../octolib", features = ["fastembed", "huggingface"] }
octolib = { git = "https://github.com/muvon/octolib.git", rev = "5c84ab4797b4768ed024afb59bfee0f185512f47" }

[profile.dev]
opt-level = 1          # Basic optimizations without slowing compilation too much
debug = true           # Keep debug symbols for backtraces
debug-assertions = true # Keep runtime checks
overflow-checks = true  # Keep overflow checks
lto = false            # Disable Link Time Optimization to speed up builds
codegen-units = 256    # Use more codegen units for faster parallel compilation
incremental = true     # Enable incremental compilation
rpath = false          # Disable runtime search path
